[package]
authors = ['ICE Team <https://icenetwork.io>']
build = 'build.rs'
description = 'ICE Network is an EVM compatible network built with Substrate framework'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Apache'
name = 'ice-runtime'
repository = 'https://github.com/web3labs/ice-substrate/'
version = '0.0.2'
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }

pallet-evm = { version = "6.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier" }
pallet-ethereum = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier" }
pallet-dynamic-fee = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier" }

pallet-evm-precompile-modexp   = { version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier" }
pallet-evm-precompile-sha3fips = { version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier" }
pallet-evm-precompile-simple   = { version = "2.0.0-dev", default-features = false,  git = "https://github.com/paritytech/frontier" }

pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }

pallet-assets = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-collective = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-treasury = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-vesting = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }

pallet-base-fee = { version = "1.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier" }

sp-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { version="4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate" }

fp-rpc  = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier" }
fp-self-contained = { version = "1.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier" }

scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

# benchmarking dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",
	"fp-self-contained/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-base-fee/std",
	"pallet-vesting/std",
	"pallet-assets/std",
	"pallet-treasury/std",
    "pallet-collective/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-benchmarking/std",
	"frame-system-benchmarking/std",

	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
]
