[package]
name = "xcm-integration-tests"
version = "0.0.1"
authors = ["Snow Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = [
  "derive",
  "max-encoded-len",
] }
scale-info = { version = "2.3.1", default-features = false, features = [
  "derive",
] }
arctic-runtime = { path = "../runtime/arctic" }

# cumulus deps
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36", default-features = false }

# frame deps
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# orml
orml-asset-registry = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.36" }
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.36" }
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.36" }


# substrate
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# polkadot deps
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }

rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
rococo-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
xcm-emulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36", package = "xcm-simulator" }

[dev-dependencies]
env_logger = "0.9.0"
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
kusama-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }

rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
rococo-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
xcm-emulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36", package = "xcm-simulator" }
