[package]
name = "pallet-airdrop"
version = "4.0.0-dev"
description = "Logic to do airdrop"
authors = ["iBriz team <https://github.com/ibriz>"]
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/ibriz/ice-substrate.git"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate.git"

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = []
try-runtime = ["frame-support/try-runtime"]
