[package]
name = "pallet-airdrop"
version = "0.4.4"
edition = "2021"
description = "Handle intiial airdropping"
authors = ["ICONOSphere <social@iconosphere.io>"]
license = "Unlicense"
publish = false
repository = "https://github.com/ibriz/ice-substrate.git"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.14", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.3.4" }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.1.0", default-features = false, features = [
    "derive",
] }
serde = { version = '1.0', default-features = false, features = ['derive'] }
serde_json = { version = '1.0', default-features = false, features = ['alloc'] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-vesting = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.30" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.30" }
fp-evm = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.30"}

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

[features]
no-vesting = []
default = ["std"]
std = [
    "log/std",
    "codec/std",
    "hex/std",
    "scale-info/std",
    "serde/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",

    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "pallet-balances/std",
    "pallet-vesting/std",

    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-simple/std",
    "fp-evm/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
