[package]
name = "pallet-fees-split"
version = "0.0.1"
authors = ["ICE Team <https://icenetwork.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/web3labs/ice-substrate/"
description = "FRAME pallet for runtime configuration"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.144", features = [ "derive" ], optional = true }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
frame-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

sp-std = { branch = "polkadot-v0.9.24", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
]
try-runtime = ["frame-support/try-runtime"]