[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-mint'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" }

scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }


[dev-dependencies]
sp-core = { version="4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'serde',
	"scale-info/std",
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']