[package]
name = "pallet-simple-inflation"
version = "0.0.2"
authors = ['ICE Team <https://icenetwork.io>']
edition = "2021"
license = "Apache-2.0"
homepage = 'https://substrate.dev'
repository = 'https://github.com/web3labs/ice-substrate/'
description = "FRAME pallet for manage simple inflation"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
log = "0.4"
hex-literal = "0.3.4"

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
frame-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.30" }
pallet-balances = { branch = "polkadot-v0.9.30", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-treasury = { branch = "polkadot-v0.9.30", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-authorship = {  default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

[features]
default = ["std"]
std = [
	"codec/std",
    "scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-treasury/std",
	"log/std"
]
try-runtime = ["frame-support/try-runtime"]