[package]
authors = ['ICE Team <https://icenetwork.io>']
build = 'build.rs'
description = 'ICE Network is an EVM compatible network built with Substrate framework'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'ice-runtime-common'
repository = 'https://github.com/web3labs/ice-substrate/'
version = '0.4.1'
publish = false

[dependencies]
hex-literal = "0.3.1"
static_assertions = "1.1.0"
num_enum = { version = "0.5.1", default-features = false }
serde = { version = "1.0.136", optional = true, default-features = false }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["max-encoded-len"] }
ethabi = { version = "15.0.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-scheduler  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.18", default-features = false }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.18", default-features = false }

[dev-dependencies]
serde_json = "1.0.68"

sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

pallet-evm = { default-features = false, git = "https://github.com/web3labs/frontier",  branch = "polkadot-v0.9.18" }
pallet-evm-precompile-modexp   = {  default-features = false, git = "https://github.com/web3labs/frontier",  branch = "polkadot-v0.9.18" }
pallet-evm-precompile-sha3fips = {  default-features = false, git = "https://github.com/web3labs/frontier",  branch = "polkadot-v0.9.18" }
pallet-evm-precompile-simple   = {  default-features = false,  git = "https://github.com/web3labs/frontier",  branch = "polkadot-v0.9.18" }

[features]
default = ["std"]
std = [
	"num_enum/std",
	"serde",
	"codec/std",
	"scale-info/std",
	"ethabi/std",

	"frame-support/std",
	"frame-system/std",
	"pallet-scheduler/std",
	"pallet-collective/std",
	"pallet-membership/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
    "pallet-evm/std",

	"cumulus-pallet-parachain-system/std",

	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
]